--- a/basics/0-Комментарии.md
+++ b/basics/0-Комментарии.md
@@ -2,7 +2,7 @@
 
 **Комментарий - Comment (комент)**  
   
-Весь этот курс тебя будут соправаждать слова в коде, которые кодом не являются.  
+Весь этот курс тебя будут сопровождать слова в коде, которые кодом не являются.  
 Они являются комментариями.  
 Их очень удобно висать во время разработки, чтобы что-нибудь запомнить или уточнить.
 ```js
