--- a/basics/0-Комментарии.md
+++ b/basics/0-Комментарии.md
@@ -4,10 +4,10 @@
   
 Весь этот курс тебя будут сопровождать слова в коде, которые кодом не являются.  
 Они являются комментариями.  
-Их очень удобно висать во время разработки, чтобы что-нибудь запомнить или уточнить.
+Их очень удобно писать во время разработки, чтобы что-нибудь запомнить или уточнить.
 ```js
 // вот пример комментария,
-// а ниже код
+// а ниже код:
 console.log(5 + 12);
 ```
 Код подствечивается относительно синтаксиса, а комментарий всегда имеет один цвет - обычно серый или зеленый.  
