--- a/basics/6-Циклы.md
+++ b/basics/6-Циклы.md
@@ -63,9 +63,9 @@ for(let i=0; i<100; i++) {
 ```js
 for(let i=0; i<3; i++) {}
 ```
-- мы внутри цикла сделали переменную i, которая в начале равна 0
-- мы указали, что цикл должен работать, пока i меньше 3
-- и мы указали, что делать с i, каждую иттерацию (каждый раз)
+- мы внутри цикла сделали переменную `i`, которая в начале равна `0`
+- мы указали, что цикл должен работать, пока `i меньше 3`
+- и мы указали, что делать с `i`, каждую иттерацию (каждый раз)
 
 Попробуем посмотреть как будет он работать на словах:
 ```js
