--- a/basics/10-Математика.md
+++ b/basics/10-Математика.md
@@ -2,7 +2,7 @@
 
 **Математика - Math (мэф)**  
 **Случайно - Random (рэндом)**  
-**Пол - Floor (флур)**  
+**Пол - Floor (флор)**  
 **Потолок - Ceil (сэил)**  
 
 В JS есть куча математических методов!  
