--- a/basics/10-Математика.md
+++ b/basics/10-Математика.md
@@ -15,7 +15,7 @@ let n = Math.random();
 - Случайные числа генерируются всегда от `0` до `1` (включительно).  
 
 А что если я хочу от `0` до `10`?  
-К этому мы вернемся попозже.
+К этому мы вернемся ниже.
 
 **Округление в меньшую сторону**
 ```js
