--- a/basics/10-Математика.md
+++ b/basics/10-Математика.md
@@ -47,7 +47,7 @@ n = Math.floor(n);
 let n = Math.floor(Math.random() * 10);
 // n -> 8
 ```
-Я всё просто соединил в одну строчку!  
+Я просто соединил в одну строчку!  
 
 ## И ещё...
 
