--- a/basics/5-Массивы.md
+++ b/basics/5-Массивы.md
@@ -63,3 +63,10 @@ nums[ nums.length - 1 ] // -> 44
 // получится: 
 nums[ 5 ] // -> 44
 ```
+
+Превратить массив в строчку с перечеслением элементов
+```js
+let numbers = [1,2,3,4,5]
+let result = numbers.join(', ') 
+// result -> "1, 2, 3, 4, 5"
+```
