--- a/basics/5-Массивы.md
+++ b/basics/5-Массивы.md
@@ -2,6 +2,7 @@
 
 **Массив - Array (эрей)**  
 **Длина - Length (ленгф)**  
+**Объединить - Join (Джоин)**
   
 Массивы - это очень круто!  
 Без них код 20 лет назад выглядил очень плохо.  
@@ -69,4 +70,10 @@ nums[ 5 ] // -> 44
 let numbers = [1,2,3,4,5]
 let result = numbers.join(', ') 
 // result -> "1, 2, 3, 4, 5"
+```
+Ещё пример:
+```js
+let names = ['Вася', 'Петя', 'Маша']
+let result = names.join(', ')
+// result -> "Вася, Петя, Маша"
 ```
