--- a/basics/11-Гравис.md
+++ b/basics/11-Гравис.md
@@ -38,6 +38,7 @@ let text = "Добрый день, " + name + ", сегодня на улице 
 let text = `Добрый день, ${name}, сегодня на улице ${celsius} градусов и ${feeling}. Желаем вам хорошего дня!`;
 // text -> Добрый день, Илья, сегодня на улице 5 градусов и прохладно. Желаем вам хорошего дня!
 ```
+**Заметь, что грависы используются вместо кавычек!**
 
 Получается, что мы просто пишем обычный текст, а там где нужно сделать вставку переменной, пишем `${}` и во внуторь пишем название переменной.  
 Аля `${name}` - это вставка переменной `name`.  
