--- a/basics/11-Гравис.md
+++ b/basics/11-Гравис.md
@@ -40,7 +40,7 @@ let text = `Добрый день, ${name}, сегодня на улице ${cel
 ```
 **Заметь, что грависы используются вместо кавычек!**
 
-Получается, что мы просто пишем обычный текст, а там где нужно сделать вставку переменной, пишем `${}` и во внуторь пишем название переменной.  
+Получается, что мы просто пишем обычный текст внутри грависов, а там где нужно сделать вставку переменной, пишем `${}` и во внуторь пишем название переменной.  
 Аля `${name}` - это вставка переменной `name`.  
   
 Ещё один пример:
