--- a/basics/11-Гравис.md
+++ b/basics/11-Гравис.md
@@ -33,7 +33,7 @@ let text = "Добрый день, " + name + ", сегодня на улице 
 // text -> Добрый день, Илья, сегодня на улице 5 градусов и прохладно. Желаем вам хорошего дня!
 ```
 По-факту очень плохо читается и легко ошибиться то ли с пробелом, то ли с кавычками, поэтому придумали гравис!  
-Тот же самый пример, но с ним всё проще:
+Тот же самый пример, но с грависом:
 ```js
 let text = `Добрый день, ${name}, сегодня на улице ${celsius} градусов и ${feeling}. Желаем вам хорошего дня!`;
 // text -> Добрый день, Илья, сегодня на улице 5 градусов и прохладно. Желаем вам хорошего дня!
