--- a/basics/11-Гравис.md
+++ b/basics/11-Гравис.md
@@ -14,7 +14,7 @@ let text = "Привет, " + name + "!";
 // text -> Привет, Илья!
 ```
 
-Вроде бы нормальный метод соединения строк, но есть минусы:
+Вроде бы нормальный способ соединения строк, но есть минусы:
 - плохо читается, из-за кучи двойных кавычек
 ```js
 let text = "Привет, " + name + "!";
