--- a/basics/12-Фишки массивов.md
+++ b/basics/12-Фишки массивов.md
@@ -68,7 +68,7 @@ let users_names = users.map(user => user.name);
 Одна строчка, Карл!  
 А теперь подробнее:
 * `map` используется с массивами
-* В `map` только 1 аргумент - функция (`user -> user.name`, да это функция). В нашем случае эта функция достает `name` перебираемого пользователя.
+* В `map` только 1 аргумент - функция (`user => user.name`, да это функция). В нашем случае эта функция достает `name` перебираемого пользователя.
 * Функция эта называется стрелочной, потому что в её объявлении участвует аля стрелка `=>`.
 
 **Стрелочная функция**, по-сути обычная функция, просто пишется короче.  
