--- a/basics/12-Фишки массивов.md
+++ b/basics/12-Фишки массивов.md
@@ -134,7 +134,7 @@ let m2s = rooms.map(room => room.m2);
 // -> [12, 9, 6, 8]
 ```
 Как ты понимаешь, `map` - это очень полезная и очень быстрая штука, чтобы собрать новый массив на основе другого массива.  
-И его можно уже вертеть на любом другом хуе, например!  
+И тот новый массив можно уже вертеть на любом другом хуе)  
 Из предыдущей задаче по комнатам: **Ты хочешь узнать сумму всей квартиры**:
 ```js
 let rooms = [
