Update 13-Фишки массивов 2.md

--- a/basics/13-Фишки массивов 2.md
+++ b/basics/13-Фишки массивов 2.md
@@ -1,4 +1,4 @@
-# Фишки массивов
+# Фишки массивов 2
 
 В прошлой главе мы изучили с с тобой `.map`, который позволяет доставать из массивов тольно необходиммые данные:
 ```js
