--- a/basics/13-Фишки массивов 2.md
+++ b/basics/13-Фишки массивов 2.md
@@ -1,6 +1,6 @@
 # Фишки массивов 2
 
-В прошлой главе мы изучили с с тобой `.map`, который позволяет доставать из массивов тольно необходиммые данные:
+В прошлой главе мы изучили с с тобой `.map`, который позволяет доставать из массивов только необходиммые данные:
 ```js
 let rooms = [
     {name: "Гостинная", m2: 12},
